[package]
name = "yboot2"
version = "0.1.0"
authors = ["Mark <alnyan@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
efi             = { path = "crates/efi" }
char16-literal  = { path = "crates/char16-literal" }
core-rt         = { path = "crates/core-rt" }
yboot2-proto    = { git = "https://git.alnyan.me/yggdrasil/yboot2-proto.git" }
